--- a/AC/Uge 1/fredag uge 1.ipynb
+++ b/AC/Uge 1/fredag uge 1.ipynb
@@ -10,12 +10,129 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Lists"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lists can be:\n",
+    "\n",
+    "* lines from a file\n",
+    "* multiple sequence alignment\n",
+    "* results\n",
+    "* data\n",
+    "* anything\n",
+    "\n",
+    "Operations available for lists:\n",
+    "\n",
+    "* indexing, []\n",
+    "* slicing, \n",
+    "1. [m:n] from m up to n-1\n",
+    "2. [m:n:o], from m to n-1 with stepsize o\n",
+    "3. [:m], everything up to m\n",
+    "4. [m:], everything from m and onwards\n",
+    "5. [:], everything\n",
+    "6. [::-1], go from behind"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quick on functions and methods"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Methods on strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"methods.png\" width=\"700\" height=\"200\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import Image \n",
+    "  \n",
+    "# get the image \n",
+    "Image(url=\"methods_strings.png\", width=700, height=200) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Methods on lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"methods_lists.png\" width=\"600\" height=\"300\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Image(url=\"methods_lists.png\", width=600, height=300) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
