--- a/NIELS/Week_1/Branching_ex.ipynb
+++ b/NIELS/Week_1/Branching_ex.ipynb
@@ -18,42 +18,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You rolled a 3!\n",
-      "You rolled a 2!\n",
-      "You rolled a 5!\n",
-      "You rolled a 2!\n",
-      "You rolled a 6!\n",
-      "You rolled a 2!\n",
-      "You rolled a 2!\n",
-      "You rolled a 4!\n",
-      "You rolled a 4!\n",
-      "You rolled a 3!\n"
+      "0.13747907386744407\n",
+      "You rolled a 1\n"
      ]
     }
    ],
    "source": [
-    "r = np.random.randint(1, 7, 10)\n",
+    "r = np.random.random()\n",
+    "print(r)\n",
     "\n",
-    "for throw in r:\n",
-    "    if throw == 1:\n",
-    "        print(\"You rolled a 1!\")\n",
-    "    elif throw == 2:\n",
-    "        print(\"You rolled a 2!\")\n",
-    "    elif throw == 3:\n",
-    "        print(\"You rolled a 3!\")\n",
-    "    elif throw == 4:\n",
-    "        print(\"You rolled a 4!\")\n",
-    "    elif throw == 5:\n",
-    "        print(\"You rolled a 5!\")\n",
-    "    else:\n",
-    "        print(\"You rolled a 6!\")"
+    "for i in range(7):\n",
+    "    if r < i/6:\n",
+    "        print(f'You rolled a {i}')\n",
+    "        break\n",
+    "        "
    ]
   },
   {
@@ -80,7 +65,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
