--- a/AC/Uge_1/fredag_uge_1.ipynb
+++ b/AC/Uge_1/fredag_uge_1.ipynb
@@ -54,19 +54,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<img src=\"methods.png\" width=\"700\" height=\"200\"/>"
+       "<img src=\"methods_strings.png\" width=\"700\" height=\"200\"/>"
       ],
       "text/plain": [
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,6 +106,21 @@
    ],
    "source": [
     "Image(url=\"methods_lists.png\", width=600, height=300) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basic looping"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* for (given a specified number of steps)\n",
+    "* while (as long as boolean variable is constant)"
    ]
   },
   {
