--- a/NIELS/Week_2/debugging.ipynb
+++ b/NIELS/Week_2/debugging.ipynb
@@ -37,6 +37,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [\"Hello\", \"how\", \"are\", \"you?\"]\n",
+    "my_dict = {}\n",
+    "index = 0\n",
+    "while index < len(my_list):\n",
+    "    my_dict[my_list[index]] = index\n",
+    "    index += 1\n",
+    "for element in my_list[1:]:\n",
+    "    print(my_dict[element])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
