--- a/AC/Uge_4/computational_complexity.ipynb
+++ b/AC/Uge_4/computational_complexity.ipynb
@@ -216,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### After an try, except run you have the possibility of adding a finally:\n",
+    "### After a 'try, except' run you have the possibility of adding a finally:\n",
     "\n",
     "The finally goes through with an action at the end, no matter what"
    ]
